--- a/index.wxss
+++ b/index.wxss
@@ -24,13 +24,13 @@
   text-overflow: ellipsis;
   overflow: hidden;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 3;
 }
 
 .bottom{
   width: 100%;
   height: 450px;
-  background-color: green;
+  background-color: orange;
 }
 
 .bottom .item{
