--- a/calculator/pages/time/time.wxss
+++ b/calculator/pages/time/time.wxss
@@ -53,18 +53,18 @@
   flex-direction: row;
   flex-wrap: wrap;
   margin-top: 20px;
-  height: auto;
+  height: 500px;
   border: 3rpx solid cadetblue;
   border-radius: 10rpx;
   background-color: lightblue;
 }
 
 .combination {
-  margin-left: 40px;
+  margin-left: 55px;
   margin-top: 10px;
   display: flex;
   flex-direction: column;
-  width: 160px;
+  width: 30%;
   height: 150px;
 }
 
